fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -210,6 +210,10 @@ a{
 	padding-top: 16px;
 }
 
+.margin-top-8px {
+	margin-top: 8px;
+}
+
 .margin-top-16px {
 	margin-top: 16px;
 }
